# The-nightmarish-forest-game

./: Cargo.toml  README.md
assets/blender/: test_platforms.blend  test_platforms.blend1
assets/drawio/: .$home.drawio.bkp  .$hospital.drawio.bkp  home.drawio  hospital.drawio  world_map.drawio
assets/gltf/: character_controller_demo2.glb  spawn.glb
src/: camera.rs  components.rs  lib.rs  main.rs  systems.rs  ui.rs
src/player/: character_controller.rs  mod.rs  structures.rs  systems.rs
