[package]
name = "the_nightmarish_forest"
version = "0.0.1"
edition = "2021"

[dependencies]
# engine tools
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
avian3d = "0.2.1"
bevy-tnua-avian3d = "0.3.0"
bevy-tnua = "0.22"

# increase in QOL
educe = "0.6.0"
autodefault = "2.0.0"
bevy-add-events-macro = "0.1.0"
bevy-inspector-egui = "0.30.0"

[profile.dev.package."*"]
opt-level = 3

