[package]
name = "the_nightmarish_forest"
version = "0.0.1"
edition = "2021"

[dependencies]
# engine tools
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.29", features = ["simd-stable", "debug-render-3d"] }

# increase in QOL
educe = "0.6.0"
autodefault = "2.0.0"
bevy-add-events-macro = "0.1.0"
bevy-inspector-egui = "0.30.0"

[profile.dev.package."*"]
opt-level = 3

