[package]
name = "the_nightmarish_forest"
version = "0.0.1"
edition = "2021"

[dependencies]
# engine tools
bevy_rapier3d = { version = "0.29", features = ["simd-stable", "debug-render-3d"] }
bevy-inspector-egui = "0.30.0"
bevy_skein = "0.1.2"

# increase in QOL
autodefault = "2.0.0"
educe = "0.6.0"

[dependencies.bevy]
version = "0.15.3"
features = [
  "dynamic_linking",
  "file_watcher",
  "embedded_watcher"
]

[profile.dev.package."*"]
opt-level = 3

